--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Rezultati uzivo</a>
+                        <a class="nav-link" href="#">Rezultati</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Uplatna mesta</a>
