ubacio slick carousel; radio na hero slideru

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-1.css">
 
@@ -38,9 +39,12 @@
                                 Igre
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="#">Loto</a>
+                                <a class="dropdown-item" href="#">Bingo</a>
+                                <a class="dropdown-item" href="#">Greb greb</a>
+                                <a class="dropdown-item" href="#">e-Srećke</a>
+                                <a class="dropdown-item" href="#">Srećkovo takmičenje</a>
+                                <a class="dropdown-item" href="#">Pravila igara</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -73,44 +77,45 @@
     <!-- NAVIGATION -->
 
     <!-- HERO SLIDER -->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active hero-1">
-                <div class="container">
-                    <div class="row hero-wrap">
-                        <div class="col-sm-7">
-                            <div class="hero-text text-center">
-                                <p class="hero-text__small">loto sedmica</p>
-                                <p class="hero-text__number">1.500.000<sup class="hero-text__number-sym">€</sup></p>
-                                <p class="hero-text__big">Osvoji glavnu premiju</p>
-                                <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
-                            </div>
+    <div class="hero">
+        <div class="hero__item active hero__item--1">
+            <div class="container">
+                <div class="row hero-wrap">
+                    <div class="col-lg-8">
+                        <div class="hero-text text-center">
+                            <p class="hero-text__small">loto sedmica</p>
+                            <p class="hero-text__number">1.500.000<sup class="hero-text__number-sym">€</sup></p>
+                            <p class="hero-text__big">Osvoji glavnu premiju</p>
+                            <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
                         </div>
-                        <div class="col-sm-5 hero-media">
-                            <img src="images\@2x-Hero-momak.png" alt="">
-                        </div>
+                    </div>
+                    <div class="col-lg-4 hero-media">
+                        <img src="images\@2x-Hero-momak.png" alt="">
                     </div>
                 </div>
             </div>
-            <!-- <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-            </div> -->
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="hero__item hero__item--2">
+            <div class="container">
+                <div class="row hero-wrap">
+                    <div class="col-sm-8">
+                        <div class="hero-text text-center">
+                            <p class="hero-text__small">loto sedmica</p>
+                            <p class="hero-text__number">1.750.000<sup class="hero-text__number-sym">€</sup></p>
+                            <p class="hero-text__big">Osvoji glavnu premiju</p>
+                            <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 hero-media">
+                        <img src="images\@2x-Hero-devojka.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- HERO SLIDER -->
 
-
+<br><br><br><br><br><br><br><br><br><br><br><br>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -118,8 +123,9 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
+    </script> <!--TODO-->
     <script src="js/main.js"></script>
+    <script src="js/slick.min.js"></script>
     
 </body>
 
