--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-1.css">
 
@@ -84,7 +85,7 @@
                     <div class="col-lg-8">
                         <div class="hero-text text-center">
                             <p class="hero-text__small">loto sedmica</p>
-                            <p class="hero-text__number">1.500.000<sup class="hero-text__number-sym">€</sup></p>
+                            <p class="hero-text__number ls">1.500.000<sup class="hero-text__number-sym">€</sup></p>
                             <p class="hero-text__big">Osvoji glavnu premiju</p>
                             <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
                         </div>
@@ -92,6 +93,8 @@
                     <div class="col-lg-4 hero-media">
                         <img src="images\@2x-Hero-momak.png" alt="">
                     </div>
+                    <img src="images/zuta-spiralica.svg" alt="" class="hero-yellow-shape" />
+                    <img src="images/crne-tackice-hero.svg" alt="" class="hero-dots-l" />
                 </div>
             </div>
         </div>
@@ -101,7 +104,7 @@
                     <div class="col-sm-8">
                         <div class="hero-text text-center">
                             <p class="hero-text__small">loto sedmica</p>
-                            <p class="hero-text__number">1.750.000<sup class="hero-text__number-sym">€</sup></p>
+                            <p class="hero-text__number ls">1.750.000<sup class="hero-text__number-sym">€</sup></p>
                             <p class="hero-text__big">Osvoji glavnu premiju</p>
                             <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
                         </div>
@@ -109,6 +112,7 @@
                     <div class="col-sm-4 hero-media">
                         <img src="images\@2x-Hero-devojka.png" alt="">
                     </div>
+                    <img src="images/zuta-spiralica.svg" alt="" class="hero-yellow-shape" />
                 </div>
             </div>
         </div>
@@ -126,6 +130,7 @@
     </script> <!--TODO-->
     <script src="js/main.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="https://kit.fontawesome.com/b071412929.js" crossorigin="anonymous"></script>
     
 </body>
 
