radio na hero i na rezulatima

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="hero-text text-center">
                             <p class="hero-text__small">loto sedmica</p>
                             <p class="hero-text__number ls">1.500.000<sup class="hero-text__number-sym">€</sup></p>
-                            <p class="hero-text__big">Osvoji glavnu premiju</p>
+                            <p class="hero-text__big">Osvoji glavnu premiju!</p>
                             <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
                         </div>
                     </div>
@@ -95,6 +95,7 @@
                     </div>
                     <img src="images/zuta-spiralica.svg" alt="" class="hero-yellow-shape" />
                     <img src="images/crne-tackice-hero.svg" alt="" class="hero-dots-l" />
+                    <img src="images/bele-tackice-hero.svg" alt="" class="hero-dots-2" />
                 </div>
             </div>
         </div>
@@ -105,19 +106,106 @@
                         <div class="hero-text text-center">
                             <p class="hero-text__small">loto sedmica</p>
                             <p class="hero-text__number ls">1.750.000<sup class="hero-text__number-sym">€</sup></p>
-                            <p class="hero-text__big">Osvoji glavnu premiju</p>
+                            <p class="hero-text__big">Osvoji glavnu premiju!</p>
                             <a class="btn btn-outline-primary" href="#"><strong>IGRAJ ONLINE</strong></a>
                         </div>
                     </div>
                     <div class="col-sm-4 hero-media">
                         <img src="images\@2x-Hero-devojka.png" alt="">
                     </div>
-                    <img src="images/zuta-spiralica.svg" alt="" class="hero-yellow-shape" />
+                    <img src="images/roze-spiralica.svg" alt="" class="hero-yellow-shape" />
+                    <img src="images/crne-tackice-hero.svg" alt="" class="hero-dots-l" />
+                    <img src="images/bele-tackice-hero-2.svg" alt="" class="hero-dots-2" />
                 </div>
             </div>
         </div>
     </div>
     <!-- HERO SLIDER -->
+
+    <!-- HOME RESULTS -->
+    <section class="">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-9">
+                    <div class="home-results">
+
+                        <div class="row ">
+                            <div class="col-8">
+                                <p class="h1 home-results__hd"><img src="images/zuta-loptica.svg" alt=""
+                                        class="" /><span>Proveri svoje rezultate<span
+                                                class="color-yellow">.</span></span></p>
+                            </div>
+                            <div class="col-4 text-right">
+                                <button
+                                    class="home-results__btns btn btn-dark btn--padd-xs btn--cern"><strong>LOTO</strong></button>
+                                <button
+                                    class="home-results__btns btn btn-dark btn-dark--inactive btn--padd-xs
+                                    btn--cern"><strong>BINGO</strong></button>
+                            </div>
+                        </div>
+
+                        <div class="row mt-4 justify-content-between">
+                            <div class="col-4">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlSelect1">Igre za pretragu:</label>
+                                        <select class="form-control custom-select">
+                                            <option>Loto</option>
+                                            <option>Bingo</option>
+                                            <option>Vanredni bingo</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlSelect1">Pretrazi po:</label>
+                                        <select class="form-control custom-select">
+                                            <option>Broju kola</option>
+                                            <option>Opsegu datuma</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlSelect1">Broju kola:</label>
+                                        <select class="form-control custom-select">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlSelect1">Godina:</label>
+                                        <select class="form-control custom-select">
+                                            <option>2020</option>
+                                            <option>2021</option>
+                                            <option>2022</option>
+                                            <option>2023</option>
+                                        </select>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-7">
+                                <p>Izveštaj za 57. kolo - datum izvlačenja 17.7.2020</p>
+                                <div class="hero-balls">
+                                    <img src="images/loto-logo.svg" alt="" class="hero-balls__logo">
+                                    <div class="hero-balls-wrap hero-balls-wrap--yellow">
+                                        <div class="hero-balls-wrap__items">4</div>
+                                        <div class="hero-balls-wrap__items">14</div>
+                                        <div class="hero-balls-wrap__items">23</div>
+                                        <div class="hero-balls-wrap__items">0</div>
+                                        <div class="hero-balls-wrap__items">31</div>
+                                        <div class="hero-balls-wrap__items">7</div>
+                                        <div class="hero-balls-wrap__items">12</div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- HOME RESULTS -->
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
 
