grid na bingo stranici + baner

--- a/bingo.html
+++ b/bingo.html
@@ -374,6 +374,153 @@
             </div>
         </div>
     </section>
+
+    <section class="draw-banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="db-purple-bg">
+                        <div class="row align-items-center">
+                            <div class="col-lg-3">
+                                <div class="draw-banner-srecko">
+                                    <img src="images/bingo/bingo-srecko.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="draw-banner-text">
+                                    <p>BINGO izvlačenje ponedeljkom, od 19.55h</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="draw-banner-tv">
+                                    <img src="images/bingo/happy-tv_logo.svg" alt="">
+                                    <img class="d-none d-lg-block" src="images/bingo/crvene-tackice-01.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="how-to-play how-to-play--bingo">
+        <div class="how-to-play__headline">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <img class="star" src="images/bingo/zvezdica-tackice-bingo.svg" alt="">
+                        <h1>Kako da igram Bingo<span>?</span></h1>
+                        <img class="girl" src="images/bingo/girl-how-to-play.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="how-to-play__grid">
+            <div class="container">
+                <div class="row d-flex row-eq-height">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="grid-item">
+                            <div class="grid-item__header grid-item__header-purple text-center text-capitalize text-white">
+                                <span>B34</span>
+                            </div>
+                            <div class="grid-item__body">
+                                <h3>Šta je Bingo 34?</h3>
+                                <p>Registruj se i igraj svoje
+                                omiljene igre onlajn uz našu
+                                registracionu karticu.Lorem
+                                ipsum dolor sit amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy nibh
+                                euismod.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="grid-item">
+                            <div class="grid-item__header grid-item__header-orange text-center text-capitalize text-white">
+                                <span>B39</span>
+                            </div>
+                            <div class="grid-item__body">
+                                <h3>Šta je Bingo 39?</h3>
+                                <p>Registruj se i igraj svoje
+                                omiljene igre onlajn uz našu
+                                registracionu karticu.Lorem
+                                ipsum dolor sit amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy nibh
+                                euismod dolor sit.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="grid-item">
+                            <div class="grid-item__header grid-item__header-blue text-center text-capitalize text-white">
+                                <span>B40+</span>
+                            </div>
+                            <div class="grid-item__body">
+                                <h3>Šta je Bingo 40+?</h3>
+                                <p>Registruj se i igraj svoje
+                                omiljene igre onlajn uz našu
+                                registracionu karticu.Lorem
+                                ipsum dolor sit amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="grid-item">
+                            <div class="grid-item__header grid-item__header-blue text-center text-capitalize text-white">
+                                <span>B34</span>
+                            </div>
+                            <div class="grid-item__body">
+                                <h3>Šta je BingoPlus?</h3>
+                                <p>Registruj se i igraj svoje
+                                omiljene igre onlajn uz našu
+                                registracionu karticu.Lorem
+                                ipsum dolor sit amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="grid-item">
+                            <div class="grid-item__header grid-item__header-purple text-center text-capitalize text-white">
+                                <span>B34</span>
+                            </div>
+                            <div class="grid-item__body">
+                                <h3>Šta je Centar?</h3>
+                                <p>Registruj se i igraj svoje
+                                omiljene igre onlajn uz našu
+                                registracionu karticu.Lorem
+                                ipsum dolor sit amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="grid-item">
+                            <div class="grid-item__header grid-item__header-green text-center text-capitalize text-white">
+                                <span>B34</span>
+                            </div>
+                            <div class="grid-item__body">
+                                <h3>Šta je Kockica?</h3>
+                                <p>Registruj se i igraj svoje
+                                omiljene igre onlajn uz našu
+                                registracionu karticu.Lorem
+                                ipsum dolor sit amet,
+                                consectetuer adipiscing elit,
+                                sed diam nonummy.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
