dodat boks - igraj na srecu

--- a/bingo.html
+++ b/bingo.html
@@ -22,7 +22,7 @@
 
     <div class="falseHeader" style="height: 120px;"></div>
 
-    <!-- #MAIN BANNER -->
+    <!-- MAIN BANNER >> -->
     <section class="main-banner main-banner--bingo">
         <div class="container">
             <div class="row">
@@ -37,7 +37,7 @@
             </div>
         </div>
     </section>
-    <!-- end #MAIN BANNER -->
+    <!-- << MAIN BANNER -->
 
     <section id="play-bingo" class="play-bingo">
         <div class="container">
@@ -421,7 +421,7 @@
                 <div class="row d-flex row-eq-height">
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-purple text-center text-capitalize text-white">
+                            <div class="grid-item__header grid-item__header-purple text-center text-uppercase text-white">
                                 <span>B34</span>
                             </div>
                             <div class="grid-item__body">
@@ -438,7 +438,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-orange text-center text-capitalize text-white">
+                            <div class="grid-item__header grid-item__header-orange text-center text-uppercase text-white">
                                 <span>B39</span>
                             </div>
                             <div class="grid-item__body">
@@ -455,7 +455,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-blue text-center text-capitalize text-white">
+                            <div class="grid-item__header grid-item__header-blue text-center text-uppercase text-white">
                                 <span>B40+</span>
                             </div>
                             <div class="grid-item__body">
@@ -471,7 +471,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-blue text-center text-capitalize text-white">
+                            <div class="grid-item__header grid-item__header-blue text-center text-uppercase text-white">
                                 <span>B34</span>
                             </div>
                             <div class="grid-item__body">
@@ -487,7 +487,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-purple text-center text-capitalize text-white">
+                            <div class="grid-item__header grid-item__header-purple text-center text-uppercase text-white">
                                 <span>B34</span>
                             </div>
                             <div class="grid-item__body">
@@ -503,7 +503,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-green text-center text-capitalize text-white">
+                            <div class="grid-item__header grid-item__header-green text-center text-uppercase text-white">
                                 <span>B34</span>
                             </div>
                             <div class="grid-item__body">
@@ -521,6 +521,19 @@
             </div>
         </div>
     </section>
+
+    <!-- CLOVER >> -->
+    <section class="clover">
+       <div class="container">
+           <div class="row text-center text-uppercase">
+               <div class="col-12">
+                   <p>Budi odgovoran</p>
+                   <h2>Igraj na sreću!<br>S‘merom!</h2>
+               </div>
+           </div>
+       </div>
+    </section>
+    <!-- << CLOVER -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
